// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Advance Date Selector (unit tests) when selected time is passed and is an absolute time should match the snapshot 1`] = `
<kv-calendar-advanced-date-selector>
  <mock:shadow-root>
    <div class="advanced-date-selector" part="calendar">
      <div class="date-selector">
        <div class="absolute-date-selector selector">
          <div class="date-selector-label">
            Absolute time range
          </div>
          <kv-range-dates-select-dropdown id="range-dates-dropdown"></kv-range-dates-select-dropdown>
        </div>
        <div class="relative-date-selector selector">
          <div class="date-selector-label">
            Relative time range
          </div>
          <kv-select>
            <kv-select-option label="Last 24 hours" value="last-24-h"></kv-select-option>
            <kv-select-option label="Last 3 days" value="last-3-d"></kv-select-option>
            <kv-select-option label="Last week" value="last-7-d"></kv-select-option>
            <kv-select-option label="Last month" value="last-1-m"></kv-select-option>
          </kv-select>
        </div>
      </div>
      <div class="selector timezone-selector">
        <kv-single-select-dropdown icon="kv-time" label="Timezone" placeholder="Select a timezone" searchable="" searchplaceholder="Search for a timezone" selectedoption="Europe/Lisbon"></kv-single-select-dropdown>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar-advanced-date-selector>
`;

exports[`Calendar Advance Date Selector (unit tests) when selected time is passed and is an relative time should match the snapshot 1`] = `
<kv-calendar-advanced-date-selector>
  <mock:shadow-root>
    <div class="advanced-date-selector" part="calendar">
      <div class="date-selector">
        <div class="absolute-date-selector selector">
          <div class="date-selector-label">
            Absolute time range
          </div>
          <kv-range-dates-select-dropdown id="range-dates-dropdown"></kv-range-dates-select-dropdown>
        </div>
        <div class="relative-date-selector selector">
          <div class="date-selector-label">
            Relative time range
          </div>
          <kv-select>
            <kv-select-option label="Last 24 hours" selected="" value="last-24-h"></kv-select-option>
            <kv-select-option label="Last 3 days" value="last-3-d"></kv-select-option>
            <kv-select-option label="Last week" value="last-7-d"></kv-select-option>
            <kv-select-option label="Last month" value="last-1-m"></kv-select-option>
          </kv-select>
        </div>
      </div>
      <div class="selector timezone-selector">
        <kv-single-select-dropdown icon="kv-time" label="Timezone" placeholder="Select a timezone" searchable="" searchplaceholder="Search for a timezone" selectedoption="Europe/Lisbon"></kv-single-select-dropdown>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar-advanced-date-selector>
`;

exports[`Calendar Advance Date Selector (unit tests) when selected timezone is passed should match the snapshot 1`] = `
<kv-calendar-advanced-date-selector>
  <mock:shadow-root>
    <div class="advanced-date-selector" part="calendar">
      <div class="date-selector">
        <div class="absolute-date-selector selector">
          <div class="date-selector-label">
            Absolute time range
          </div>
          <kv-range-dates-select-dropdown id="range-dates-dropdown"></kv-range-dates-select-dropdown>
        </div>
        <div class="relative-date-selector selector">
          <div class="date-selector-label">
            Relative time range
          </div>
          <kv-select>
            <kv-select-option label="Last 24 hours" value="last-24-h"></kv-select-option>
            <kv-select-option label="Last 3 days" value="last-3-d"></kv-select-option>
            <kv-select-option label="Last week" value="last-7-d"></kv-select-option>
            <kv-select-option label="Last month" value="last-1-m"></kv-select-option>
          </kv-select>
        </div>
      </div>
      <div class="selector timezone-selector">
        <kv-single-select-dropdown icon="kv-time" label="Timezone" placeholder="Select a timezone" searchable="" searchplaceholder="Search for a timezone" selectedoption="Europe/Lisbon"></kv-single-select-dropdown>
      </div>
    </div>
  </mock:shadow-root>
</kv-calendar-advanced-date-selector>
`;
